--- a/TestApplication/Views/DataView.axaml
+++ b/TestApplication/Views/DataView.axaml
@@ -12,8 +12,13 @@
 		<Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto" ColumnDefinitions="Auto,Auto"  >
 			<TextBlock Grid.Row="1" Grid.Column="0" Grid.RowSpan="2" Text="{Binding CurrentValue, StringFormat={}{0:F2}}" HorizontalAlignment="Center" FontWeight="Bold" />
 			
-			<avalonia:CartesianChart Grid.Row="3" Grid.Column="0"   Width="200" Height="100" Series="{Binding SeriesData}"
-									 XAxes="{Binding XAxes}" YAxes="{Binding YAxes}" FontSize="8" SyncContext="{Binding Sync}" TooltipPosition="Hidden" />
+			<avalonia:CartesianChart Grid.Row="3" Grid.Column="0"   Width="200" Height="100" 
+                                     Series="{Binding SeriesData}"
+									 XAxes="{Binding XAxes}" 
+                                     YAxes="{Binding YAxes}" 
+                                     FontSize="8" 
+                                     SyncContext="{Binding Sync}" 
+                                     TooltipPosition="Hidden" />
 
 		</Grid>
 	</Border>
