--- a/TestApplication/App.axaml
+++ b/TestApplication/App.axaml
@@ -1,8 +1,8 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="TestLiveCharts.App"
-             RequestedThemeVariant="Dark">
+             >
     <Application.Styles>
-        <FluentTheme/>
-    </Application.Styles>
+		<FluentTheme Mode="Dark" />
+	</Application.Styles>
 </Application>
