--- a/TestApplication/Views/MainContentView.axaml
+++ b/TestApplication/Views/MainContentView.axaml
@@ -9,72 +9,7 @@
                                 x:Class="TestLiveCharts.Views.MainContentView"
                                 FontSize="14"
                                 Foreground="{StaticResource SystemBaseHighColor}">
-	<UserControl.Styles>
-		<Style Selector="TabControl.sidebar">
-			<Setter Property="TabStripPlacement" Value="Left"/>
-			<Setter Property="Padding" Value="0 0 0 0"/>
-			<Setter Property="Background" Value="{x:Null}"/>
-			<Setter Property="Template">
-				<ControlTemplate>
-					<Border
-						Margin="{TemplateBinding Margin}"
-						BorderBrush="{TemplateBinding BorderBrush}"
-						BorderThickness="{TemplateBinding BorderThickness}">
-						<DockPanel>
-							<ScrollViewer Width="150" Margin="0 30 0 0"
-								Name="PART_ScrollViewer"
-								HorizontalScrollBarVisibility="{TemplateBinding (ScrollViewer.HorizontalScrollBarVisibility)}"
-								VerticalScrollBarVisibility="{TemplateBinding (ScrollViewer.VerticalScrollBarVisibility)}"
-								Background="{TemplateBinding Background}"
-								DockPanel.Dock="Left">
-								<ItemsPresenter
-									Name="PART_ItemsPresenter"
-									
-									ItemsPanel="{TemplateBinding ItemsPanel}"
-									>
-								</ItemsPresenter>
-							</ScrollViewer>
-							<ContentControl Content="{TemplateBinding Tag}" HorizontalContentAlignment="Right" DockPanel.Dock="Bottom"/>
-							<ScrollViewer Background="{x:Null}"
-								HorizontalScrollBarVisibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=SelectedItem.(ScrollViewer.HorizontalScrollBarVisibility)}"
-								VerticalScrollBarVisibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=SelectedItem.(ScrollViewer.VerticalScrollBarVisibility)}">
-								<ContentPresenter
-										Name="PART_SelectedContentHost"
-										Margin="{TemplateBinding Padding}"
-										HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-										VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-										Content="{TemplateBinding SelectedContent}"
-										ContentTemplate="{TemplateBinding SelectedContentTemplate}">
-								</ContentPresenter>
-							</ScrollViewer>
-						</DockPanel>
-					</Border>
-				</ControlTemplate>
-			</Setter>
-		</Style>
-
-		<Style Selector="TabControl.sidebar > TabItem">
-			<Setter Property="BorderThickness" Value="0"/>
-			<Setter Property="FontSize" Value="14"/>
-			<Setter Property="Margin" Value="0"/>
-			<Setter Property="Padding" Value="16"/>
-			<Setter Property="Width" Value="150" />
-			<Setter Property="HorizontalContentAlignment" Value="Stretch" />
-			<Setter Property="(ScrollViewer.HorizontalScrollBarVisibility)" Value="Auto"/>
-			<Setter Property="(ScrollViewer.VerticalScrollBarVisibility)" Value="Auto"/>
-		</Style>
-		<Style Selector="TabControl.sidebar > TabItem:selected /template/ Border#PART_SelectedPipe">
-			<Setter Property="IsVisible" Value="False" />
-		</Style>
-		<Style Selector="TabControl.sidebar > TabItem:selected">
-			<Setter Property="Background" Value="#1fffffff"/>
-		</Style>
-
-		<Style Selector="TabControl.sidebar > TabItem:pointerover /template/ Border#PART_LayoutRoot">
-			<Setter Property="Background" Value="#3fffffff"/>
-		</Style>
-
-	</UserControl.Styles>
+	
 
     <Panel>
 		<DockPanel HorizontalAlignment="Stretch">
@@ -93,9 +28,12 @@
 		</DockPanel>
        
 		<TabControl x:Name="TabControl" Classes="sidebar" Margin="0 40 0 20">
-			<TabItem Header="Test" VerticalContentAlignment="Center" >
+			<TabItem Header="TimeSeries" VerticalContentAlignment="Center" >
                 <views:DataCollectionView/>
 			</TabItem>
+            <TabItem Header="ScatterPlots" VerticalContentAlignment="Center" >
+                
+            </TabItem>
         </TabControl>
     </Panel>
 </UserControl>
