--- a/TestApplication/Views/MainContentView.axaml
+++ b/TestApplication/Views/MainContentView.axaml
@@ -32,7 +32,7 @@
                 <views:DataCollectionView/>
 			</TabItem>
             <TabItem Header="ScatterPlots" VerticalContentAlignment="Center" >
-                
+                <views:ScatterPlotTestView/>
             </TabItem>
         </TabControl>
     </Panel>
