--- a/TestApplication/Views/DataControllerView.axaml
+++ b/TestApplication/Views/DataControllerView.axaml
@@ -7,18 +7,18 @@
              mc:Ignorable="d" d:DesignWidth="1100" d:DesignHeight="950">
 
     <Grid RowDefinitions="Auto,Auto,*" ColumnDefinitions="*,125" MinWidth="200" MaxWidth="1050">
-		<ItemsControl  Grid.Row="2"  Margin="10,10,0,0"  Items="{Binding DataViewModels}">
-			<ItemsControl.ItemsPanel>
-				<ItemsPanelTemplate>
-					<WrapPanel />
-				</ItemsPanelTemplate>
-			</ItemsControl.ItemsPanel>
-
-			<ItemsControl.ItemTemplate>
-				<DataTemplate>
-					<views:DataView Margin="0 0 20 20" />
-				</DataTemplate>
-			</ItemsControl.ItemTemplate>
-		</ItemsControl>
+		<!-- <ItemsControl  Grid.Row="2"  Margin="10,10,0,0"  Items="{Binding DataViewModels}"> -->
+		<!-- 	<ItemsControl.ItemsPanel> -->
+		<!-- 		<ItemsPanelTemplate> -->
+		<!-- 			<WrapPanel /> -->
+		<!-- 		</ItemsPanelTemplate> -->
+		<!-- 	</ItemsControl.ItemsPanel> -->
+		<!-- -->
+		<!-- 	<ItemsControl.ItemTemplate> -->
+		<!-- 		<DataTemplate> -->
+		<!-- 			<views:DataView Margin="0 0 20 20" /> -->
+		<!-- 		</DataTemplate> -->
+		<!-- 	</ItemsControl.ItemTemplate> -->
+		<!-- </ItemsControl> -->
 	</Grid>
 </UserControl>
