--- a/TestApplication/Views/ScatterPlotTestView.axaml
+++ b/TestApplication/Views/ScatterPlotTestView.axaml
@@ -3,47 +3,58 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:views="clr-namespace:TestLiveCharts.Views"
-             xmlns:models="clr-namespace:TestLiveCharts.Models"
              xmlns:viewModels="clr-namespace:TestLiveCharts.ViewModels"
              mc:Ignorable="d"
              d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="TestLiveCharts.Views.ScatterPlotTestView">
-
+             x:Class="TestLiveCharts.Views.ScatterPlotTestView"
+             x:Name="Root">
+	<Design.DataContext>
+        <!-- This only sets the DataContext for the previewer in an IDE,
+             to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
+        <viewModels:ScatterPlotTestViewModel/>
+    </Design.DataContext>
 
     <Grid RowDefinitions="Auto,Auto, Auto" ColumnDefinitions="Auto,auto">
         <Button Grid.Row="0" Grid.Column="0" x:Name="ConnectButton" Content="Load Data"
-                Command="{Binding LoadDataCommand}"
+                Command="{Binding LoadDataCommand }"
                 HorizontalContentAlignment="Center" Width="100" Margin="15,20"/>
 
 		<Border Grid.Row="1" Grid.Column="0" Grid.RowSpan="2" BorderBrush="Black" BorderThickness="2"  Margin="10">
+            <views:DropletScatterPlotView  x:Name="ScatterPlot"  
+                                           PolygonItem="{Binding PolygonA, Mode=TwoWay}" 
+                                           PolygonName="{Binding PolygonA.Name, Mode=TwoWay}"
+                                           MyProp ="{Binding PolygonA.Name}"
+                                           HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
-            <TabControl x:Name="TabControl" >
-                <TabItem Header="ScottPlot" VerticalContentAlignment="Center">
-                    <!-- <views:DropletScatterPlotView  x:Name="ScatterPlot"  HorizontalAlignment="Left" VerticalAlignment="Top"/> -->
-                    <!-- PolygonName="{Binding PolygonAName, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}" -->
-                </TabItem>
+            <!-- <TabControl x:Name="TabControl" > -->
+            <!--     <TabItem Header="ScottPlot" VerticalContentAlignment="Center"> -->
+            <!--         -->
+            <!--         ~1~ PolygonName="{Binding PolygonA.Name, Mode=TwoWay}" @1@ -->
+            <!--         ~1~ PolygonName="{Binding PolygonAName, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}" @1@ -->
+            <!--     </TabItem> -->
 
 
-                <TabItem Header="ItemsControl" VerticalContentAlignment="Center">
-                    <ItemsControl  Margin="10,10,0,0"
-                                   Items="{Binding Polygons}">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <WrapPanel />
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                    
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel Orientation="Vertical" Margin="10">
-                                    <TextBlock Text="{Binding Name}"/>
-                                    <views:DropletScatterPlotView PolygonItem="{Binding}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-                </TabItem>
-            </TabControl>
+                <!-- <TabItem Header="ItemsControl" VerticalContentAlignment="Center"> -->
+                <!--     <ItemsControl  Margin="10,10,0,0" -->
+                <!--                    Items="{Binding Polygons}"> -->
+                <!--         <ItemsControl.ItemsPanel> -->
+                <!--             <ItemsPanelTemplate> -->
+                <!--                 <WrapPanel /> -->
+                <!--             </ItemsPanelTemplate> -->
+                <!--         </ItemsControl.ItemsPanel> -->
+                <!--      -->
+                <!--         <ItemsControl.ItemTemplate> -->
+                <!--             <DataTemplate DataType="{x:Type models:Polygon}"> -->
+                <!--                 <StackPanel Orientation="Vertical" Margin="10"> -->
+                <!--                     <TextBlock Text="{Binding Name}"/> -->
+                <!--                     <views:DropletScatterPlotView PolygonItem="{Binding ., RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}, Path=DataContext}"  -->
+                <!--                                                   HorizontalAlignment="Left" VerticalAlignment="Top"/> -->
+                <!--                 </StackPanel> -->
+                <!--             </DataTemplate> -->
+                <!--         </ItemsControl.ItemTemplate> -->
+                <!--     </ItemsControl> -->
+                <!-- </TabItem> -->
+            <!-- </TabControl> -->
         </Border>
 	</Grid>
 </UserControl>
