--- a/FpgaScatterPlotTest/App.axaml
+++ b/FpgaScatterPlotTest/App.axaml
@@ -8,5 +8,6 @@
 
     <Application.Styles>
         <FluentTheme Mode="Light"/>
+        <StyleInclude Source="/Styles/DropletScatterPlotStyles.xaml" />
     </Application.Styles>
 </Application>
